# romtool

./: .gitignore  .pylintrc  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  README.rst  hashdb.txt  notes.txt  pynsist.in.cfg  pyproject.toml  romtool.py  runtests.sh  setup.py  todo.md  tox.ini
data/maps/: __init__.py  hashdb.txt
data/maps/7th Saga (US)/: arrays.csv  (+1 more)
romlib/: __init__.py  binary.py  exceptions.py  patch.py  rommap.py  struct.py  text.py  util.py
specs/7th Saga (US)/: arrays.csv
specs/Final Fantasy (US)/: arrays.csv
src/romlib/: .pylintrc  __init__.py  array.py  bsmonkey.py  charset.py  collections.py  converters.py  field.py  io.py  patch.py  primitives.py  rom.py  rommap.py  romstruct.py  struct.py  structures.py  text.py  types.py  util.py
src/romtool/: __init__.py  __main__.py  args.yaml  charset.py  cli.py  commands.py  document.py  exceptions.py  field.py  io.py  logging.yaml  patch.py  primitives.py  rom.py  rommap.py  structures.py  text.py  types.py  util.py
test/: test.rom  test_binary.py  test_built.py  test_field.py  test_io.py  test_patch.py  test_primitives.py  test_rom.py  test_text.py  test_types.py  test_util.py
test/binary/: romstruct_malformed.csv
test/map/: arrays.csv
tests/: test_binary.py  test_patch.py  test_specs.py  test_text.py  test_util.py
tests/binary/: romstruct_good.csv
tests/map/: arrays.csv
tests/specfiles/: test_struct.csv
tools/: README.md  dats.txt  magic.txt  nointro.xsd  perftests.sh  rtbuild.py
ureflib/: __init__.py  binary.py  exceptions.py  patch.py  specs.py  text.py  util.py
(+260 files in other folders)
